# DokuSuite

./: .gitignore  .spectral.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md  backlog-p1.json  backlog-p2.json  labels.yml
apps/server/: README.md  alembic.ini  pyproject.toml
apps/server/app/: __init__.py  main.py
apps/server/app/api/routes/: auth.py  exports.py  health.py  ingestion.py  locations.py  orders.py  photos.py  shares.py  uploads.py  users.py
apps/server/app/api/schemas/: __init__.py  location.py  order.py  pagination.py  photo.py  share.py  upload.py  user.py
apps/server/app/core/: config.py  logging.py  metrics.py  middleware.py  security.py
apps/server/app/db/: models.py  session.py
apps/server/app/services/: calendar_week.py  exif.py  geocoding.py  mail.py  ninox_sync.py  phash.py  watermark.py
apps/server/dokusuite_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/server/migrations/: env.py  script.py.mako
apps/server/migrations/versions/: 1c5d2f04f7a7_add_customer_id_fields.py  2d7af46664d1_create_core_tables.py  49e9ee7829b2_add_location_timestamps.py  8b6d8cc8fe0e_add_geog_to_location.py  93feabdd0497_add_geog_index_to_location.py  9d4e9c0ad13e_add_audit_log_table.py  a2c0d5e9ff4b_add_fields_to_photo.py  b2d96ab19384_add_photo_timestamps.py  b59cb3e3e16c_add_ext_ref_table.py  c4e14335c43d_add_user_table.py  d25f9e4c3a1b_add_phash_to_photo.py
apps/server/tests/: test_auth.py  test_auth_guard.py  test_db_session.py  test_exif.py  test_exports.py  test_geocoding.py  test_health.py  test_ingestion.py  test_locations.py  test_ninox_sync.py  test_orders.py  test_photos.py  test_protected_routes.py  test_shares.py  test_tracing.py  test_upload_intent.py  test_uploads.py
docs/: README.md  data-model.md  decisions.md  doku_suite_git_hub_templates_backlog_v_1.md  doku_suite_repo_codex_prompts_v_1.md  env-secrets.md  open-questions.md  requirements.md  roadmap.md  security-privacy.md  stadtbild_doku_suite_grobkonzept_architekturvorschlag_v_1_0_10_08.md  vision.md
infra/: README.md
(+84 files in other folders)
