[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dokusuite-server"
version = "0.1.0"
description = "DokuSuite backend service (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "PyJWT>=2.8",
  "bcrypt>=4.0",
  "email-validator>=2.1",
  "sqlmodel>=0.0.22",
  "geoalchemy2>=0.18",
  "alembic>=1.13",
  "boto3>=1.34",
  "redis>=6.4",
  "rq>=2.4",
  "Pillow>=10.0",
  "openpyxl>=3.1",
  "python-multipart>=0.0.6",
  "prometheus-client>=0.20",
  "slowapi>=0.1.9",
  "ImageHash>=4.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.5",
]
opentelemetry = [
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "F", "E", "W"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
